Connectors can now be curved.

--- a/config/komnenos.config
+++ b/config/komnenos.config
@@ -14,9 +14,9 @@ settings = {
 connectors = {
   default = {
     colour = "#0080FF"
-    line_width = 2
+    line_width = 3
     arrow_length = 8
     arrow_width = 4
-    style = bezier
+    curved = yes
     }
   }
