Diagram: moved more settings into komnenos.config

--- a/config/komnenos.config
+++ b/config/komnenos.config
@@ -20,3 +20,28 @@ connectors = {
     curved = yes
     }
   }
+  
+diagram = {
+   label_font = {
+      family = "Segoe UI";
+      size = 10;
+      foreground = black;
+   }
+   
+   node = {
+     border = {
+       width = 2
+       colour = black
+       selected_colour = blue
+       }
+     minimum_size = { 30 30 }
+     margin = { 4 3 }
+   }
+   
+   connector = {
+    line_width = 2
+    arrow_length = 8
+    arrow_width = 4
+    corner_radius = 10
+   }      
+}
