Komnenos.Configuration: added debug_layout setting. komnenos.config: updates to default config file (visible node gap 30, internal node gap 15, row size 60, debug layout off)

--- a/config/komnenos.config
+++ b/config/komnenos.config
@@ -36,6 +36,8 @@ diagram = {
        }
      minimum_size = { 30 30 }
      margin = { 4 3 }
+     gap = { visible = 30 internal = 15 }
+     row_size = 60
    }
    
    connector = {
@@ -44,4 +46,7 @@ diagram = {
     arrow_width = 4
     corner_radius = 10
    }      
+   
+   debug_layout = no
+   
 }
